# emergence

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  tree.txt
.github/workflows/: release-tauri-app.yaml
dnas/emergence/workdir/: dna.yaml
dnas/emergence/zomes/coordinator/emergence/: Cargo.toml
dnas/emergence/zomes/coordinator/emergence/src/: all_maps.rs  all_proxy_agents.rs  all_sessions.rs  all_spaces.rs  lib.rs  map.rs  messages.rs  note.rs  proxy_agent.rs  relation.rs  session.rs  settings.rs  slot.rs  space.rs  time_window.rs  utils.rs
dnas/emergence/zomes/coordinator/file_storage/: Cargo.toml
dnas/emergence/zomes/coordinator/file_storage/tests/common/: mod.rs
dnas/emergence/zomes/coordinator/profiles/: Cargo.toml
dnas/emergence/zomes/coordinator/profiles/tests/common/: mod.rs
dnas/emergence/zomes/integrity/emergence/: Cargo.toml
dnas/emergence/zomes/integrity/emergence/src/: lib.rs  map.rs  note.rs  proxy_agent.rs  relation.rs  session.rs  settings.rs  slot.rs  space.rs  time_window.rs
dnas/emergence/zomes/integrity/file_storage/: Cargo.toml
dnas/emergence/zomes/integrity/profiles/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: package.json  scale-common.ts  scale-local.ts  scale.ts  session-interest-local.ts  session-interest.ts  stress-external-hc.ts  stress-local.ts  stress.ts  util.ts  vitest.config.ts  websocket-stress.ts
tests/src/emergence/emergence/: all-sessions.test.ts  all-spaces.test.ts  common.ts  note.test.ts  relations.test.ts  scale.test.ts  session.test.ts  slots.test.ts  space.test.ts  time-window.test.ts
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css  contexts.ts  emergence-client.ts  emergence-store.ts  main.ts  we.ts
ui/src/emergence/emergence/: Admin.svelte  AllProxyAgents.svelte  AllSessions.svelte  AllSiteMaps.svelte  AllSpaces.svelte  AnyAvatar.svelte  AttachmentsDialog.svelte  AttachmentsList.svelte  Avatar.svelte  CloneManagerActiveButton.svelte  CloneManagerCreateDialog.svelte  CloneManagerDialog.svelte  CloneManagerJoinDialog.svelte  CloneManagerShareDialog.svelte  Confirm.svelte  CreateSession.svelte  CreateSlot.svelte  CreateSpace.svelte  CreateTimeWindow.svelte  DisableForOs.svelte  Discover.svelte  EditSession.svelte  EditSpace.svelte  Feed.svelte  FeedElemDetail.svelte  FeedFilter.svelte  Folk.svelte  InterestSelect.svelte  NoteCrud.svelte  NoteDetail.svelte  NoteSummary.svelte  People.svelte  PersonSummary.svelte  Profile.svelte  ProxyAgentAvatar.svelte  ProxyAgentCrud.svelte  ProxyAgentDetail.svelte  ProxyAgentSummary.svelte  Schedule.svelte  ScheduleSlotting.svelte  (+35 more)
ui/src/stores/: clone-manager-store.ts  emergence-store.ts
we_dev/: config.ts
workdir/: happ.yaml  web-happ.yaml
