[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.2.1"
hdk = "=0.1.1"
serde = "1"
holochain = "0.1.3"

[workspace.dependencies.emergence]
path = "dnas/emergence/zomes/coordinator/emergence"

[workspace.dependencies.emergence_integrity]
path = "dnas/emergence/zomes/integrity/emergence"

[workspace.dependencies.profiles]
path = "dnas/emergence/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/emergence/zomes/integrity/profiles"
