[package]
name = "file_storage"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "file_storage"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

file_storage_integrity = { workspace = true } 
hc_zome_file_storage_coordinator = { git = "https://github.com/holochain-open-dev/file-storage", branch = "nixify" }


[dev-dependencies]
#futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { worskpace = true, default-features = false, features = [
  "test_utils",
] }
#tokio = { version = "1.3", features = ["full"] }

