[package]
name = "profiles"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

profiles_integrity = { workspace = true } 
hc_zome_profiles_coordinator = "0.1.2"


[dev-dependencies]
fixt = "0.1.0"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { worskpace = true, default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }

