[package]
name = "file_storage_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "file_storage_integrity"

[dependencies]
hc_zome_file_storage_integrity = {git = "https://github.com/holochain-open-dev/file-storage", branch="for-hdk-v0.2.1-beta-dev.0"}
hdi = { workspace = true }

serde = { workspace = true }
